--- a/taller.html
+++ b/taller.html
@@ -4,8 +4,9 @@
 	<BODY>
 		<H1>TALLER DE GITHUB</H1>
 		</hr>
-		<p>ESA</p>
+		<p>Página USM</p>
 		<br>
+		<a href="http://www.usm.cl" title="Página Web USM">USM</a>
 	</BODY>
 
 </HTML>
