Revert "Pequeña modificación"
This reverts commit d8aeef3ccb272e31c401d04209e1416fe58604ad.

--- a/taller.html
+++ b/taller.html
@@ -4,9 +4,8 @@
 	<BODY>
 		<H1>TALLER DE GITHUB</H1>
 		</hr>
-		<p>Página USM</p>
+		<p>ESA</p>
 		<br>
-		<a href="http://www.usm.cl" title="Página Web USM">USM</a>
 	</BODY>
 
 </HTML>
